[gd_scene load_steps=4 format=2]

[ext_resource path="res://Play.gd" type="Script" id=1]
[ext_resource path="res://UI/Desktop/return.gd" type="Script" id=2]
[ext_resource path="res://Assets/Textures/colour theme.tres" type="Theme" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 447.0
margin_right = 577.0
margin_bottom = 600.0
alignment = 1

[node name="Label" type="Label" parent="HBoxContainer/VBoxContainer"]
margin_top = 76.0
margin_right = 130.0
margin_bottom = 107.0
text = "Lights out 
Desktop "

[node name="spacer" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 111.0
margin_right = 130.0
margin_bottom = 131.0
rect_min_size = Vector2( 130, 20 )

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 135.0
margin_right = 130.0
margin_bottom = 166.0
theme = ExtResource( 3 )
text = "Play"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spacer2" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 170.0
margin_right = 130.0
margin_bottom = 190.0
rect_min_size = Vector2( 130, 20 )

[node name="options" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 194.0
margin_right = 130.0
margin_bottom = 225.0
theme = ExtResource( 3 )
text = "options"

[node name="spacer3" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 229.0
margin_right = 130.0
margin_bottom = 249.0
rect_min_size = Vector2( 130, 20 )

[node name="return" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 253.0
margin_right = 130.0
margin_bottom = 284.0
theme = ExtResource( 3 )
text = "main menu"
script = ExtResource( 2 )

[node name="spacer4" type="VBoxContainer" parent="HBoxContainer/VBoxContainer"]
margin_top = 288.0
margin_right = 130.0
margin_bottom = 488.0
rect_min_size = Vector2( 130, 200 )

[node name="Button" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 492.0
margin_right = 130.0
margin_bottom = 523.0
theme = ExtResource( 3 )
text = "credits"

[connection signal="pressed" from="HBoxContainer/VBoxContainer/Play" to="HBoxContainer/VBoxContainer/Play" method="_on_Play_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/options" to="HBoxContainer/VBoxContainer/Play" method="_on_options_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/return" to="HBoxContainer/VBoxContainer/Play" method="_on_return_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/return" to="HBoxContainer/VBoxContainer/return" method="_on_return_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/Button" to="HBoxContainer/VBoxContainer/Play" method="_on_Button_pressed"]
